# YOLOs-CPP

./: CMakeLists.txt  README.md  build.sh
src/: camera_inference.cpp  video_inference.cpp
